[gd_scene load_steps=14 format=3 uid="uid://d4aglt0u3ajn3"]

[ext_resource type="Script" path="res://scripts/learning_material_scripts/python_level/shifu's-lessons/topic_five/example_box_lesson_3.gd" id="1_gg7ev"]
[ext_resource type="Texture2D" uid="uid://di5cmmfl6ypk6" path="res://images/shop_panel.png" id="2_jd25p"]
[ext_resource type="FontFile" uid="uid://cwbqlu04cyyvj" path="res://fonts-and-music/fonts/quiz_code_pages_font/LibreBaskerville-Bold.ttf" id="3_u3na0"]
[ext_resource type="Texture2D" uid="uid://c61vkjdl8heew" path="res://images/learning_material_boxes/arrow_yellow.png" id="4_v6432"]
[ext_resource type="FontFile" uid="uid://c1w4uwymgxw6f" path="res://fonts-and-music/fonts/quiz_code_pages_font/LibreBaskerville-Italic.ttf" id="5_yeuxi"]
[ext_resource type="Script" path="res://scripts/block_area.gd" id="6_vr6u2"]

[sub_resource type="Animation" id="Animation_3o6vt"]
resource_name = "display"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dialogue_box_sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_cy4aj"]
resource_name = "dissolve"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dialogue_box_sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wo8im"]
resource_name = "shake_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("dialogue_box_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(454, -11), Vector2(464, -11), Vector2(444, -11), Vector2(484, -11), Vector2(464, -11), Vector2(454, -11)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_exk74"]
_data = {
"display": SubResource("Animation_3o6vt"),
"dissolve": SubResource("Animation_cy4aj"),
"shake_animation": SubResource("Animation_wo8im")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8j3br"]
size = Vector2(701, 925)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hc6bu"]
size = Vector2(684, 927.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0lwg"]
size = Vector2(212, 883)

[node name="example_box" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gg7ev")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_exk74")
}

[node name="dialogue_box_sprite" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.921053)
layout_mode = 0
offset_left = 399.0
offset_top = -160.0
offset_right = 5734.0
offset_bottom = 3910.0
rotation = 1.5708
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_jd25p")
metadata/_edit_group_ = true

[node name="panel" type="Panel" parent="dialogue_box_sprite"]
modulate = Color(1, 1, 1, 0.768627)
layout_mode = 0
offset_left = 369.0
offset_top = 3714.0
offset_right = 926.0
offset_bottom = 4491.0
rotation = -1.5708
scale = Vector2(6, 6)

[node name="dialogue_text" type="RichTextLabel" parent="dialogue_box_sprite/panel"]
layout_mode = 0
offset_left = 29.0
offset_top = 48.0
offset_right = 516.0
offset_bottom = 707.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/bold_font = ExtResource("3_u3na0")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true

[node name="Arrow" type="Sprite2D" parent="dialogue_box_sprite/panel"]
visible = false
position = Vector2(477.052, 243.214)
rotation = 1.5708
texture = ExtResource("4_v6432")

[node name="VBoxContainer" type="VBoxContainer" parent="dialogue_box_sprite/panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -29.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button" type="Button" parent="dialogue_box_sprite/panel/VBoxContainer"]
modulate = Color(1, 1, 1, 0.839216)
self_modulate = Color(1, 1, 1, 0.835294)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_yeuxi")
text = "Got it!"

[node name="next_char" type="Timer" parent="."]

[node name="next_message" type="Timer" parent="."]

[node name="block_area" type="StaticBody2D" parent="."]
script = ExtResource("6_vr6u2")

[node name="area_2d" type="Area2D" parent="block_area"]

[node name="collision_shape_2d" type="CollisionShape2D" parent="block_area/area_2d"]
position = Vector2(372.5, 259.5)
shape = SubResource("RectangleShape2D_8j3br")
debug_color = Color(0.788235, 0, 0.0196078, 0.419608)

[node name="collision_shape_2d" type="CollisionShape2D" parent="block_area"]
position = Vector2(372, 261.25)
shape = SubResource("RectangleShape2D_hc6bu")
debug_color = Color(0, 0, 0, 0.0784314)

[node name="encounter_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="encounter_area"]
position = Vector2(-100, 262.5)
shape = SubResource("RectangleShape2D_r0lwg")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="dialogue_box_sprite/panel/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
[connection signal="player_hit" from="block_area" to="." method="_on_block_area_player_hit"]
[connection signal="body_entered" from="encounter_area" to="." method="_on_encounter_area_body_entered"]
